test github tutorial

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -5,3 +5,9 @@ android.nonTransitiveRClass=true
 
 # Prefab configuration for FBJNI
 android.prefabVersion=2.0.0 
+
+# Enable Hermes for better performance
+hermesEnabled=true
+
+# Add these to support the new architecture
+newArchEnabled=true
